--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "airtable": "^0.12.1",
     "axios": "^1.4.0",
     "next": "^13.4.12",
     "react": "18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
@@ -20,4 +22,3 @@
     "tailwindcss": "^3.3.3"
   }
 }
-
